; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/extr_clk.c___clk_get_hw.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/extr_clk.c___clk_get_hw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.clk = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.clk_hw* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.clk_hw* @__clk_get_hw(%struct.clk* %0) #0 {
  %2 = alloca %struct.clk*, align 8
  store %struct.clk* %0, %struct.clk** %2, align 8
  %3 = load %struct.clk*, %struct.clk** %2, align 8
  %4 = icmp ne %struct.clk* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %12

6:                                                ; preds = %1
  %7 = load %struct.clk*, %struct.clk** %2, align 8
  %8 = getelementptr inbounds %struct.clk, %struct.clk* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load %struct.clk_hw*, %struct.clk_hw** %10, align 8
  br label %12

12:                                               ; preds = %6, %5
  %13 = phi %struct.clk_hw* [ null, %5 ], [ %11, %6 ]
  ret %struct.clk_hw* %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
